organizing the pages and formating the site

--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>BLVCK$MITHMUSIC</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body id="homebody">
 
 
 
     <div class="container">
-        <img class="img" src="1.jpg" style="width:100%;">
-        <button>Chuba</button>
         <div class="centered">BLVCK$MITHMUSIC</div>
     </div>
     <div class="navbar">
@@ -30,6 +28,7 @@
 
 
 
-</body>
 
+
+</body>
 </html>
