cleaned up code / created new ui

--- a/Beats.html
+++ b/Beats.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+
+
+
+
+
+
+
+
+
+
+
 <body id="beatsbody">
- 
+
     <div class="navbar">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html" class="active">HOME</a>
         <a href="Beats.html">BEATS</a>
-        <a href="colabs.html">COLABS</a>
+        <a href="services.html">MUSIC SERVICES</a>
         <a href="projects.html">PROJECTS</a>
         <a href="contact.html">CONTACT</a>
-      </div>
-     
+    </div>
+
 
 
 
 
 </body>
+
 </html>
