--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>B</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
+
+
+<section id="contact">
+	<div class="sectionheader">	<h1>CONTACT</h1></div>
+	<article>
+	<p><h3>Let's talk</h3></p>
+		
+			<label for="checkcontact" class="contactbutton"><div class="mail"></div></label><input id="checkcontact" type="checkbox">
+	
+			<form action="" method="post" class="contactform">
+				<p class="input_wrapper"><input type="text" name="contact_nom" value=""  id ="contact_nom"><label for="contact_nom">NAME</label></p>
+				<p class="input_wrapper"><input type="text" name="contact_email" value=""  id ="contact_email"><label for="contact_email">EMAIL</label></p>
+				<p class="textarea_wrapper"><textarea name="contact_message" id="contact_message"></textarea></p>
+				<p class="submit_wrapper"><input type="submit" value="SUBMIT"></p>			
+			</form>
+	</article>
+</section>
+
+
+
+
+
+
+
+
 <body id="contactsbody">
- 
-   
+
+
     <div class="navbar">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html" class="active">HOME</a>
         <a href="Beats.html">BEATS</a>
-        <a href="colabs.html">COLABS</a>
+        <a href="services.html">MUSIC SERVICES</a>
         <a href="projects.html">PROJECTS</a>
         <a href="contact.html">CONTACT</a>
-      </div>
-     
+    </div>
+
 
 
 
 
 </body>
+
 </html>
