--- a/projects.html
+++ b/projects.html
@@ -8,12 +8,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+
+
+
+
+
+
+
+
+
 <body id="projectsbody">
  
     <div class="navbar">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html" class="active">HOME</a>
         <a href="Beats.html">BEATS</a>
-        <a href="colabs.html">COLABS</a>
+        <a href="services.html">MUSIC SERVICES</a>
         <a href="projects.html">PROJECTS</a>
         <a href="contact.html">CONTACT</a>
       </div>
